# reaction-fans-api

./: Cargo.toml
config/: config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250116_000001_create_table.rs  main.rs
src/: main.rs
src/api/v1/: mod.rs
src/api/v1/author/: add_author.rs  get_author.rs  mod.rs  req_model.rs
src/api/v1/topic/: add_topic.rs  match_topic.rs  mod.rs  req_model.rs
src/api/v1/user/: login_oauth_bilibili.rs  login_oauth_qq.rs  mod.rs  register.rs  req_model.rs  verify_register_code.rs
src/api/v1/video/: add_video.rs  get_video.rs  mod.rs  req_model.rs
src/conf/: cache.rs  conf.rs  db.rs  mailer.rs  mod.rs  nats.rs  oauth.rs  server.rs
src/constant/: constant.rs  mod.rs
src/entity/: author.rs  bilibili_meta.rs  category.rs  mod.rs  topic.rs  user.rs  video.rs
src/errs/: bilibili.rs  http.rs  mod.rs
src/service/: mod.rs
src/service/author/: add_author.rs  get_author.rs  mod.rs  svc.rs
src/service/email/: mod.rs  send_email.rs  svc.rs
src/service/topic/: add_topic.rs  match_topic.rs  mod.rs  svc.rs
src/service/user/: login_oauth_bilibili.rs  login_oauth_qq.rs  mod.rs  register.rs  svc.rs  verify_register_code.rs
src/service/video/: add_video.rs  get_video.rs  mod.rs  svc.rs
src/utils/: bilibili.rs
src/utils/bilibili/: author.rs  iframe.rs  mod.rs  sign.rs  video.rs
