[package]
name = "reaction-fans-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.12.0", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
chrono = "0.4.39"
derive_more = "0.99"
config = "0.15.4"
rand = "0.8.5"
redis = { version = "0.28.1", features = ["tokio-comp", "r2d2"] }
lettre = "*"
